[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/ThrowableObject.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.6093, 12.3731 )

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[node name="ThrowableObject" type="KinematicBody2D"]
position = Vector2( 250, 250 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
color = Color( 0.596078, 0.596078, 0.596078, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 4 )

[node name="GrabArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource( 3 )

[node name="TimerDrop" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerThrown" type="Timer" parent="." groups=[
"Torch",
]]
wait_time = 0.1
one_shot = true

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="GrabArea" to="." method="_on_GrabArea_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_GrabArea_body_exited"]
[connection signal="timeout" from="TimerDrop" to="." method="_on_TimerDrop_timeout"]
[connection signal="timeout" from="TimerThrown" to="." method="_on_TimerThrown_timeout"]
